--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && git push origin main",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
