--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "npm run build && git add . && git commit -m 'latest  build' && git push origin development",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
