modified navigation removed 404 page link

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-REACT_APP_PORT = 8000
 PORT = 9000
+REACT_APP_EMAIL = info@chronopegasus.com
+REACT_APP_LINKEDIN = https://www.linkedin.com
+REACT_APP_FACEBOOK = https://www.facebook.com
+REACT_APP_BEANCE = https://www.behance.com
+REACT_APP_DRIBBLE = https://www.dribble.com
